<resources>
    <string name="app_name">My Working Hours</string>
    <string name="hour">時</string>
    <string name="minute">分</string>
    <string name="startTime">開始時間"</string>
    <string name="endTime">終了時間</string>
    <string name="restTime">休憩時間</string>
    <string name="calculation">計算実行</string>
    <string name="yourWorkingTime">あなたの稼働時間は</string>
    <string name="workingTime">稼働時間</string>

    <string name="hint_startTimeHour">09</string>
    <string name="hint_startTimeMinute">00</string>
    <string name="hint_endTimeHour">18</string>
    <string name="hint_endTimeMinute">00</string>
    <string name="workingHour">08</string>
    <string name="workingMinute">00</string>
    <string name="hint_restTimeMinute">000</string>

    <string name="pleaseRestTime">休憩時間を入力してください。</string>
    <string name="pleaseWorkingTime">開始時間と終了時間を入力してください。</string>
</resources>
